# Copyright 2026 gRPC authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_python//python:defs.bzl", "py_binary")
load("//bazel:cython_library.bzl", "pyx_library")

package(default_visibility = ["//visibility:public"])

# C++ library that depends on absl
cc_library(
    name = "hello_lib",
    srcs = ["hello.cc"],
    hdrs = ["hello.h"],
    includes = ["."],
    deps = [
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:initialize",
    ],
)

# Cython library (results in one .so file)
pyx_library(
    name = "hello_cython",
    srcs = ["hello_cython.pyx"],
    deps = [":hello_lib"],
)

py_binary(
    name = "main",
    srcs = ["main.py"],
    imports = ["."],
    main = "main.py",
    deps = [
        ":hello_cython",
        "//src/python/grpcio/grpc:grpcio",
    ],
)
