# Copyright 2019 The gRPC Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

py_binary(
    name = "server",
    srcs = ["server.py"],
    deps = [
        "//src/python/grpcio/grpc:grpcio",
        "//examples:helloworld_py_pb2",
        "//examples:helloworld_py_pb2_grpc",
    ],
    srcs_version = "PY2AND3",
    python_version = "PY3",
)

py_binary(
    name = "client",
    srcs = ["client.py"],
    deps = [
        "//src/python/grpcio/grpc:grpcio",
        "//examples:helloworld_py_pb2",
        "//examples:helloworld_py_pb2_grpc",
    ],
    srcs_version = "PY2AND3",
    python_version = "PY3",
)

py_test(
    name = "test/compression_example_test",
    srcs = ["test/compression_example_test.py"],
    srcs_version = "PY2AND3",
    data = [
      ":client",
      ":server",
    ],
    size = "small",
    python_version = "PY3",
)
